Closed Bug 1971549 Opened 6 months ago Closed 6 months ago

[Ubuntu] Checkbox outlines are barely visible in prompts, sidebar and in Profile Manager

Categories

(Core :: Widget: Gtk, defect)

Firefox 141
Desktop
Linux
defect

Tracking

()

VERIFIED FIXED
141 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox-esr140 --- unaffected
firefox139 --- unaffected
firefox140 --- unaffected
firefox141 --- verified

People

(Reporter: bhidecuti, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(5 files)

Attached image 12.png

Found in

  • 141.0a1 (2025-06-10)

Affected versions

  • 141.0a1

Tested platforms

  • Affected platforms: Ubuntu 22.04

Preconditions

  • Have the “Always check if Nightly is your default browser” option from about:preferences enabled

Steps to reproduce

  1. Launch Firefox and observe the checkbox in the “Make Nightly your primary browser?” prompt
  2. Enable the dark theme and repeat step 1

Expected result

  • The checkbox should have a clearly defined and visible outline in both light and dark themes

Actual result

  • In light theme, the checkbox from the setting Nightly as the default browser prompt has a barely visible outline. In dark theme, the outline is not visible at all

Regression range

Additional notes

  • Also reproducing for the checkboxes in the Profile Manager or in Sidebar
  • GTK theme: Yaru / Yaru
  • See the attached screenshot
  • For macOS and Windows, this is tracked in bug 1970096

:emilio, since you are the author of the regressor, bug 1968925, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Also see Page Info (Ctrl+I) buttons, checkboxes and radio buttons which now have dark low contrast borders on Ubuntu 25.04 since Bug 1968925.

Component: Layout → Widget: Gtk

I'd argue that our rendering matches the native theme better in all these cases. If we want I guess we can use our stand-in colors for yaru and adwaita since those are rather neutral themes..

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED

The checkbox background is lighter in the gtk4-demo which gives it some contrast and is much easier to see than the ones in Page Info.

Newer GNOME controls in dark mode use lightness for contrast rather than darkness.

Pushed by ealvarez@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/2f57c5065c19 https://hg.mozilla.org/integration/autoland/rev/581d74688fbb Use stand-in button border colors for yaru / adwaita, or in case we didn't find a suitable one. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 141 Branch

Verified as fixed using Firefox Nightly 141.0a1 (2025-06-15) on Ubuntu 22.04. Checkboxes now have a clearly defined and visible outline in both light and dark themes (tested with Yaru and Adwaita OS themes).

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-found-in-c141] → [qa-found-in-c141][qa-ver-done-c141/b140]
QA Contact: bhidecuti

Set release status flags based on info from the regressing bug 1968925

Please nominate this for ESR140 when you get a chance.

Flags: needinfo?(emilio)

Comment on attachment 9494196 [details]
Bug 1971549 - Use stand-in button border colors for yaru / adwaita, or in case we didn't find a suitable one. r=stransky

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: improves checkbox looks on common GTK themes
  • User impact if declined:
  • Fix Landed on Version: 141
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Color tweaks.
Flags: needinfo?(emilio)
Attachment #9494196 - Flags: approval-mozilla-esr140?

Comment on attachment 9494196 [details]
Bug 1971549 - Use stand-in button border colors for yaru / adwaita, or in case we didn't find a suitable one. r=stransky

Approved for 140.2.0esr

Attachment #9494196 - Flags: approval-mozilla-esr140? → approval-mozilla-esr140+
https://hg.mozilla.org/releases/mozilla-esr140/rev/8c3784e3d411 Revert "Bug 1971549 - Use stand-in button border colors for yaru / adwaita, or in case we didn't find a suitable one. r=stransky, for causing linux failures a=backout https://github.com/mozilla-firefox/firefox/commit/2ce3f80962a5060ad195bbfa7cbfda8ca23cc436

Comment on attachment 9494196 [details]
Bug 1971549 - Use stand-in button border colors for yaru / adwaita, or in case we didn't find a suitable one. r=stransky

Backed out of esr140 for causing linux failures
https://treeherder.mozilla.org/logviewer?job_id=521035949&repo=mozilla-esr140

Flags: needinfo?(emilio)
Attachment #9494196 - Flags: approval-mozilla-esr140+ → approval-mozilla-esr140?

I think this probably doesn't need uplift, it's a regression from the patch that wasn't uplifted to 140

Flags: needinfo?(emilio)
Attachment #9494196 - Flags: approval-mozilla-esr140?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: