Bug 1971549 - Use stand-in button border colors for yaru / adwaita, or in case we didn't find a suitable one. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D253407